# crystal_ai_agent_web

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  rawData.jsonl
services/rag-api/: README.md  pyproject.toml  rag-chat
services/rag-api/models/growth-route-transformer/v2.0.0/: MANIFEST.json  MODEL_CARD.md  SOURCE_SNAPSHOT.md
services/rag-api/scripts/: evaluate_retrieval_current.py
services/rag-api/src/: config.py  main.py
services/rag-api/src/accounts/: __init__.py  dependencies.py  store.py
services/rag-api/src/agent/: graph.py  prediction_policy.py  short_term_policy.py  state.py  utils.py
services/rag-api/src/agent/nodes/: __init__.py  analyze_and_route.py  answer_direct.py  answer_from_prediction.py  answer_with_aggregate_evidence.py  answer_with_evidence.py  answer_with_limits.py  ask_clarification.py  assess_aggregate_sufficiency.py  assess_prediction_eligibility.py  assess_retrieval_sufficiency.py  build_evidence_pack.py  compact_persistent_state.py  finalize_response.py  grade_evidence.py  load_context.py  load_long_memory.py  plan_aggregate_retrieval.py  plan_retrieval.py  prepare_turn.py  retrieve_aggregate_records.py  retrieve_records.py  (+4 more)
services/rag-api/src/agentweb_rag_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/rag-api/src/api/: auth.py  chat.py  conversations.py  prediction.py
services/rag-api/src/cli/: __init__.py  rag_bootstrap.py  rag_catalog_init.py  rag_chat.py  rag_config.py  rag_embed.py  rag_export_minilm_onnx.py  rag_ingest.py  rag_memory_init.py  rag_memory_worker.py  rag_normalize.py  rag_predict.py  rag_search.py
services/rag-api/src/conversations/: __init__.py  store.py
services/rag-api/src/db/: models.py  session.py
services/rag-api/src/ingestion/: __init__.py  method_aliases.py  normalizer.py  schemas.py  temperature.py
services/rag-api/src/llm/: client.py  factory.py  mock_client.py  openai_compatible.py
services/rag-api/src/memory/: __init__.py  checkpointer.py  store.py  worker.py
services/rag-api/src/persistence/: __init__.py  database.py
services/rag-api/src/prediction/: __init__.py  bundle.py  contracts.py  factory.py  repository.py  runtime.py  service.py  validation.py
services/rag-api/src/retrieval/: catalog_query.py  embedding.py  fact_catalog.py  factory.py  growth_records.py  local_jsonl.py  milvus_hybrid.py  milvus_store.py  mock_retrieval.py  query_expansion.py  rrf.py  service.py
services/rag-api/src/schemas/: auth.py  chat.py  conversations.py  prediction.py
services/rag-api/src/streaming/: events.py  sse.py
services/rag-api/tests/: test_accounts_and_conversations.py  test_aggregate_retrieval.py  test_memory.py  test_postgres_memory.py  test_prediction.py  test_prediction_api.py  test_prediction_fallback_graph.py
(+78 files in other folders)
